--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
+yarn.lock
+.gitignore
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
