--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   "homepage": "https://github.com/nikulinn/js-start#readme",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.34.0",
-    "eslint": "^8.22.0",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^22.0.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.2.5",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   }
 }
